# roaure

./: .gitignore  .protolint.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml  roaure.code-workspace  roaure.service  roaure.timer
backend/: .gitignore  go.mod  go.sum
backend/cmd/: main.go
backend/example/database/: database.go  main.go
backend/example/monitor/: main.go
backend/example/router/: main.go
backend/example/speedtest/: main.go
backend/internal/database/: database.go  doc.go  models.go
backend/internal/led/: main.go
backend/internal/monitor/: doc.go  monitor.go
backend/internal/router/: client.go  doc.go
backend/internal/server/: convert_schedule.go  convert_weekday.go  doc.go  server.go  server_iperf_server_conf_get.go  server_iperf_server_conf_update.go  server_metrics_get.go  server_monitor_conf_get.go  server_monitor_conf_update.go  server_monitor_toggle.go  server_reboot.go  server_router_conf_get.go  server_router_conf_update.go  server_schedules_create.go  server_schedules_delete.go  server_schedules_list.go  server_schedules_update.go
backend/internal/speedtest/: client.go  doc.go
backend/internal/utils/: doc.go
backend/internal/validation/: doc.go
frontend/: settings.gradle
frontend/app/: build.gradle
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
proto/: easyp.yaml
proto/roaure/v1/: iperf_server_conf.proto  metrics.proto  monitor_conf.proto  roaure_service.proto  router_conf.proto  schedule.proto  time.proto
proto/scripts/: mklink.ps1
src/roaure/: __init__.py
(+41 files in other folders)
